--- a/index.html
+++ b/index.html
@@ -70,14 +70,54 @@
             <div class="booking-container">
                 <div class="hotel-booking">
                     <select id="cars" name="carlist" form="carform">
-                        <option value="volvo">Volvo</option>
-                        <option value="saab">Saab</option>
-                        <option value="opel">Opel</option>
-                        <option value="audi">Audi</option>
+                        <option value="volvo">Dubai</option>
+                        <option value="saab">Helton</option>
+                        <option value="opel">Elaf</option>
+                        <option value="audi">Sarjah</option>
+                        <option value="audi">Marriot</option>
+                        <option value="audi">Seraton</option>
+                        <option value="audi">Crown Plaza</option>
+                        <option value="audi">Forhad and Rubal Holets</option>
                     </select>
                     <input type="date">
                     <input type="date">
-                    <input type="text">
+                    <p>Check Availability</p>
+                </div>
+            </div>
+        </section>
+        <!-- start new section of gallery From forhad side -->
+
+        <section>
+            <div class="banner">
+                <h1 class="">Welcome to Bon Hotel</h1>
+                <p>Good people. Good thinking. Good feeling.</p>
+                <button class="btn-explore">Explore</button>
+            </div>
+        </section>
+        <section>
+            <div class="service row d-flex justify-content-center mt-5 py-5 align-items-center bg-light">
+                <div class="title-facilities text-center">
+                    <h2>Facilities</h2>
+                </div>
+                <div class="d-flex flex-column align-items-center col-2 ">
+                    <img src="images/service-logo/dashicons_editor-kitchensink.png" alt="">
+                    <h5 class="mt-2">kitchen</h5>
+                </div>
+                <div class="d-flex flex-column align-items-center col-2 ">
+                    <img src="images/service-logo/bx_bx-taxi.png" alt="">
+                    <h5 class="mt-2">kitchen</h5>
+                </div>
+                <div class="d-flex flex-column align-items-center col-2 ">
+                    <img src="images/service-logo/clarity_wifi-solid.png" alt="">
+                    <h5 class="mt-2">kitchen</h5>
+                </div>
+                <div class="d-flex flex-column align-items-center col-2 ">
+                    <img src="images/service-logo/ic_twotone-pool.png" alt="">
+                    <h5 class="mt-2">kitchen</h5>
+                </div>
+                <div class="d-flex flex-column align-items-center col-2 ">
+                    <img src="images/service-logo/maki_fitness-centre-11.png" alt="">
+                    <h5 class="mt-2">kitchen</h5>
                 </div>
             </div>
         </section>
